// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots prenda-spark/Checkbox Basic Checkbox 1`] = `
<label
  className="MuiFormControlLabel-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-root-1 MuiIconButton-colorSecondary"
    label="Basic checkbox"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-10"
        data-indeterminate={false}
        name="basicCheckbox"
        onChange={[Function]}
        type="checkbox"
        value="basic"
      />
      <span
        className="makeStyles-icon-2 "
      />
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    <span
      className="makeStyles-label-6"
    >
      Basic checkbox
    </span>
  </span>
</label>
`;

exports[`Storyshots prenda-spark/Checkbox Checked Checkbox 1`] = `
<label
  className="MuiFormControlLabel-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-root-11 PrivateSwitchBase-checked-18 Mui-checked MuiIconButton-colorSecondary"
    label="Checked checkbox"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={true}
        className="PrivateSwitchBase-input-20"
        data-indeterminate={false}
        name="checkedCheckbox"
        onChange={[Function]}
        type="checkbox"
        value="checked"
      />
      <span
        className="makeStyles-icon-12 makeStyles-checkedIconContainer-14"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-checkIcon-13"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
      </span>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    <span
      className="makeStyles-label-16"
    >
      Checked checkbox
    </span>
  </span>
</label>
`;

exports[`Storyshots prenda-spark/Checkbox Disabled Checkbox 1`] = `
<label
  className="MuiFormControlLabel-root Mui-disabled"
>
  <span
    aria-disabled={true}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-27 MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-root-21 PrivateSwitchBase-disabled-29 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
    label="Disabled checkbox"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-30"
        data-indeterminate={false}
        disabled={true}
        name="disabledCheckbox"
        onChange={[Function]}
        type="checkbox"
        value="disabled"
      />
      <span
        className="makeStyles-icon-22 makeStyles-disabledIcon-25"
      />
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
  >
    <span
      className="makeStyles-label-26"
    >
      Disabled checkbox
    </span>
  </span>
</label>
`;
